--- a/projects.html
+++ b/projects.html
@@ -3,13 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Dhannush A Y</title>
     <link rel="icon" href="cookie (7).png">
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     
+    <div id="overlay">
+        <div id="overlay-content">
+          Hi iam Dhanush a Full-Stack developer &nbsp; Welcome to my portfolio<br>
+          <img src="https://raw.githubusercontent.com/MartinHeinz/MartinHeinz/master/wave.gif" width="30px">
+        </div>
+      </div>
+      <script>
+       $.fn.center = function () {
+  this.css("position","absolute");
+  this.css("top", Math.max(0, (
+    ($(window).height() - $(this).outerHeight()) / 2) + 
+     $(window).scrollTop()) + "px"
+  );
+  this.css("left", Math.max(0, (
+    ($(window).width() - $(this).outerWidth()) / 2) + 
+     $(window).scrollLeft()) + "px"
+  );
+  return this;
+}
 
+$("#overlay").show();
+$("#overlay-content").show().center();
+
+setTimeout(function(){    
+  $("#overlay").fadeOut();
+}, 3000);
+      </script>
     <nav class="navi">
         <div class="container-fluid">
         <div class="brand">Dhannush
@@ -57,19 +84,19 @@
         <a href="https://github.com/dhannushAY/Google-home-page" target="_blank" class="primary-link"> View Code</a>
         <a href="https://dhannush-googlehomepagef330d9.netlify.app/" target="_blank" class="secondary-link"> Live Project</a>
     </section>
-    <section class="section ow">
+    <section class="section ">
         <h2> Digital Clock</h2>
         <p>A page using html</p>
         <a href="https://github.com/dhannushAY/DigitalClock-master" target="_blank" class="primary-link"> View Code</a>
         <a href="https://loving-boyd-959f00.netlify.app/" target="_blank" class="secondary-link"> Live Project</a>
     </section>
-     <section class="section ">
+     <section class="section ow">
         <h2> To-Do</h2>
         <p>A To-Do app using javascript</p>
         <a href="https://github.com/dhannushAY/To-do_v2-master" target="_blank" class="primary-link"> View Code</a>
         <a href="https://wonderful-murdock-1b4048.netlify.app/" target="_blank" class="secondary-link"> Live Project</a>
     </section>
-    <section class="section ">
+    <section class="section">
         <h2> Guess My Number </h2>
         <p>This JavaScript guessing game objective is to make the user guess a randomly generated number from 1 to 20</p>
         <a href="https://github.com/dhannushAY/Guess-My-Number-main" target="_blank" class="primary-link"> View Code</a>
@@ -130,4 +157,3 @@
     
 </body>
 </html>
-
